alignment with conditions-checkbox off and lightbox issues

--- a/views/css/aeuc_front.css
+++ b/views/css/aeuc_front.css
@@ -174,6 +174,7 @@ body.tax-display-enabled .product-miniature .thumbnail-container .product-thumbn
 div.condition-label label.js-terms {
 	text-align: left;
 }
+#conditions-to-approve #cta-terms-and-conditions-0,
 #conditions-to-approve #cta-terms-and-conditions-1 {
 	font-weight: bold;
 }
